<resources>
    <string name="app_name">Treasure Hunt</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="connect_to_add_cache">Connect to add cache</string>
    <string name="login_status" translatable="false">login_status</string>
    <string name="title_activity_maps">Map</string>
    <string name="cancel">Cancel</string>
    <string name="disconect">Disconnect</string>
    <string name="map_button">map</string>
    <string name="play_button">play</string>
    <string name="quit_button">Quit</string>
    <string name="loged_id" translatable="false">loged_id</string>
    <string name="login_button">Sign in or register</string>
    <string name="register">register</string>
    <string name="add_cache">Add cache</string>
    <string name="legal">Legal mentions</string>
    <string name="app_first_run" translatable="false">app_first_run</string>
    <string name="RGPD"> Personal data collected by this application are mendatory if you create an acount under responsibility Treasure Hunt inc. there are not supposed to be used for commercial purpose.
according to the law, especially EU rule 2016/679, General Data Protection Regulation (GDPR). People whose personal data are collected can acess, rectify, suppress, for letitimate purpose by addressing their querry by email to legal@treasurehunt.com</string>
    <string name="terrain">Terrain</string>
    <string name="terrain_concrete">Concrete</string>
    <string name="terrain_dirt">Dirt</string>
    <string name="terrain_sand">Sand</string>
    <string name="difficulty">Difficulty</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="type_box">Box</string>
    <string name="type_case">Case</string>
    <string name="type_treasure">Treasure</string>
    <string name="cache_found">Cache found</string>
    <string name="owner">Owner</string>


    <string name="hint">Hint</string>
    <string name="description">Description</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="ok">ok</string>


    <string name="filters">Filters</string>
    <string name="title_activity_basic" translatable="false">BasicActivity</string>

    <string name="preference_file_key" translatable="false">fr.utt.if26.projet.SHARED_PREFERENCE</string>
    <string name="box_filter_key" translatable="false">box_filter_key</string>
    <string name="case_filter_key" translatable="false">case_filter_key</string>
    <string name="treasure_filter_key" translatable="false">treasure_filter_key</string>
    <string name="prompt_username">Username</string>
    <string name="view_cache">Cache\'s Profile</string>
    <string name="accept">Accept</string>
    <string name="RGPD_acceptKey" translatable="false">false</string>
    <string name="RGPD_must_confirm">Accept User Consent to Connect or sign Up</string>
</resources>
