<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddCacheActivity">

    <android.support.v7.widget.Toolbar android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="@string/add_cache"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android" />

    <ScrollView
        android:id="@+id/addCacheScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9">

        <LinearLayout
            android:id="@+id/addCacheScrollViewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioGroup
                android:id="@+id/difficultyRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/difficulty" />

                <RadioButton
                    android:id="@+id/easyRadioButton"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/easy" />

                <RadioButton
                    android:id="@+id/mediumRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/medium" />

                <RadioButton
                    android:id="@+id/hardRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hard" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/typeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type" />

                <RadioButton
                    android:id="@+id/boxRadioButton"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type_box" />

                <RadioButton
                    android:id="@+id/caseRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type_case" />

                <RadioButton
                    android:id="@+id/treasureRadioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type_treasure" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/terrainRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/terrain" />

                <RadioButton
                    android:id="@+id/concreteRadioButton"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/terrain_concrete" />

                <RadioButton
                    android:id="@+id/sandRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/terrain_sand" />

                <RadioButton
                    android:id="@+id/dirtRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/terrain_dirt"  />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sizeTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/sizeEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/size"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hintTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/hintEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/DescriptionTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>



        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/addCacheButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:text="@string/add_cache" />
</LinearLayout>