<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FilterActivity">

    <android.support.v7.widget.Toolbar android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="@string/filters"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/boxCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_box" />

        <CheckBox
            android:id="@+id/caseCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_case" />

        <CheckBox
            android:id="@+id/treasureCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_treasure" />

    </LinearLayout>

    <Button
        android:id="@+id/confirmFilterButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/ok" />
</LinearLayout>