<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ownerTitle"
        android:textSize="12pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owner" />

    <TextView
        android:id="@+id/ownerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/difficultyTitle"
        android:textSize="12pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty" />


    <TextView
        android:id="@+id/difficultyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />


    <TextView
        android:id="@+id/terrainTitle"
        android:textSize="12pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terrain" />


    <TextView
        android:id="@+id/terrainTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/typeTitle"
        android:textSize="12pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type" />


    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/sizeTitle"
        android:textSize="12pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/size" />

    <TextView
        android:id="@+id/sizeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />


    <TextView
        android:id="@+id/hintTitle"
        android:textSize="12pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint" />


    <TextView
        android:id="@+id/hintTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/DescriptionTitle"
        android:textSize="12pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />


    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />


</LinearLayout>
