<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LegalActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/textViewRGPD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/legal" />

    <TextView
        android:id="@+id/textViewRGPD"
        android:justificationMode="inter_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RGPD"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/my_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <CheckBox
        android:id="@+id/RGPDcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewRGPD"
        android:text="@string/accept" />

    <Button
        android:id="@+id/buttonOK"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/buttonAccept"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/buttonReject"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</android.support.constraint.ConstraintLayout>